--- a/themes/Adwaita/gtk-3.0/gtk-widgets.css
+++ b/themes/Adwaita/gtk-3.0/gtk-widgets.css
@@ -784,11 +784,14 @@ GtkTreeMenu .menuitem * {
 .primary-toolbar.toolbar .button:insensitive {
     border-style: none;
 
-    color: @insensitive_fg_color;
-
     background-image: none;
     background-color: alpha (@theme_base_color, 0.0);
     -GtkWidget-focus-line-width: 0;
+}
+
+.primary-toolbar .toolbar .button *:insensitive,
+.primary-toolbar.toolbar .button *:insensitive {
+    color: shade (@insensitive_fg_color, 0.85);
 }
 
 .primary-toolbar .toolbar .button:hover,
