scrolledwindow: reduce border-radius to 2, and remove padding
border-radius = 2 is consistent with the other popular frames, such as
GtkEntry and GtkButton.
padding = 0 makes the scrollbars finally behave like in the mockups; no
more whitespace between the frame and the scrollbars \o/

--- a/themes/Adwaita/gtk-3.0/gtk-widgets.css
+++ b/themes/Adwaita/gtk-3.0/gtk-widgets.css
@@ -363,7 +363,9 @@ GtkScrolledWindow.frame {
     border-style: solid;
     border-color: darker (@theme_bg_color);
     border-width: 1;
-    border-radius: 3;
+    border-radius: 2;
+
+    padding: 0;
 }
 
 /***********
