column-header: dim the arrow if it's not prelight
Make it consistent with the combobox behavior.

--- a/themes/Adwaita/gtk-3.0/gtk-widgets.css
+++ b/themes/Adwaita/gtk-3.0/gtk-widgets.css
@@ -1090,6 +1090,10 @@ column-header .button {
                                             to(shade (@button_border, 1.23)));
 }
 
+column-header .button GtkArrow {
+    color: @internal_element_color;
+}
+
 column-header:nth-child(last) .button {
     border-width: 0 0 1 0;
 }
