adwaita: ensure background-color is always defined
Otherwise widgets that do not override background-color will get the
fallback color from the default GTK+ CSS provider, which is especially
bad for the dark theme.

--- a/themes/Adwaita/gtk-3.0/gtk-widgets.css
+++ b/themes/Adwaita/gtk-3.0/gtk-widgets.css
@@ -53,15 +53,17 @@
     -adwaita-inset-bottom: none;
 }
 
-GtkWindow {
-    /* Style */
-    background-color: @theme_bg_color;
-    color: @theme_fg_color;
-}
-
 /***************
  * Base States *
  ***************/
+GtkWindow {
+    color: @theme_fg_color;
+}
+
+* {
+    background-color: @theme_bg_color;
+}
+
 *:hover {
     background-color: shade (@theme_bg_color, 1.02);
     color: @theme_fg_color;
