menu: define a separate color for the border of combobox menus

--- a/themes/Adwaita/gtk-3.0/gtk-widgets.css
+++ b/themes/Adwaita/gtk-3.0/gtk-widgets.css
@@ -608,7 +608,7 @@ GtkTreeMenu .menuitem {
 
     border-style: solid;
     border-width: 1 0;
-    border-color: @progressbar_border;
+    border-color: @menu_combobox_border;
 }
 
 GtkTreeMenu .menuitem * {
