--- a/themes/Adwaita/gtk-3.0/gtk-dark.css
+++ b/themes/Adwaita/gtk-3.0/gtk-dark.css
@@ -10,6 +10,8 @@
 @define-color menu_bg_color shade (@theme_bg_color, 0.4);
 @define-color menu_fg_color #ffffff;
 
+@define-color menu_combobox_border darker (@theme_selected_bg_color);
+
 @define-color theme_tooltip_bg_color #000000;
 @define-color theme_tooltip_fg_color #eeeeee;
 
