--- a/themes/Adwaita/gtk-3.0/gtk.css
+++ b/themes/Adwaita/gtk-3.0/gtk.css
@@ -21,6 +21,7 @@
 @define-color menu_bg_color shade (@theme_bg_color, 0.45);
 @define-color menu_fg_color #ffffff;
 @define-color menu_controls_color #aaaaaa;
+@define-color menu_combobox_border #3277bf;
 
 @define-color link_color #4a90d9;
 @define-color frame_color #8a9580;
@@ -77,7 +78,7 @@
 
 @define-color progressbar_background_a #76b0ec;
 @define-color progressbar_background_b #1f72c6;
-@define-color progressbar_border #3277bf;
+@define-color progressbar_border @menu_combobox_border;
 @define-color progressbar_pattern #000000;
 
 @define-color internal_element_color #888a85;
