--- a/themes/Adwaita/gtk-3.0/gtk.css
+++ b/themes/Adwaita/gtk-3.0/gtk.css
@@ -18,9 +18,9 @@
 @define-color theme_selected_bg_color @selected_bg_color;
 @define-color theme_selected_fg_color @selected_fg_color;
 
-@define-color menu_bg_color shade (@theme_bg_color, 0.45);
-@define-color menu_fg_color #ffffff;
-@define-color menu_controls_color #aaaaaa;
+@define-color menu_bg_color shade (@theme_bg_color, 1.1);
+@define-color menu_fg_color @theme_fg_color;
+@define-color menu_controls_color shade (@theme_fg_color, 0.9);
 @define-color menu_combobox_border #3277bf;
 
 @define-color link_color #4a90d9;
