--- a/themes/Adwaita/gtk-3.0/gtk-widgets-assets.css
+++ b/themes/Adwaita/gtk-3.0/gtk-widgets-assets.css
@@ -63,3 +63,51 @@
 .radio row:selected:focused:inconsistent {
     background-image: url("assets/radio-mixed.svg");
 }
+
+.entry {
+    border-image: url("assets/entry-border-normal.svg") 2 / 2 stretch;
+}
+
+.entry:focused {
+    border-image: url("assets/entry-border-focused.svg") 2 / 2 stretch;
+}
+
+GtkSwitch.trough,
+GtkScale.trough.horizontal {
+    border-image: url("assets/trough-border-horizontal.svg") 2 / 2 stretch;
+}
+
+GtkScale.trough.vertical {
+    border-image: url("assets/trough-border-vertical.svg") 2 / 2 stretch;
+}
+
+GtkSwitch.trough:active,
+GtkScale.progressbar.horizontal {
+    border-image: url("assets/trough-active-border-horizontal.svg") 2 / 2 stretch;
+}
+
+GtkScale.progressbar.vertical {
+    border-image: url("assets/trough-active-border-vertical.svg") 2 / 2 stretch;
+}
+
+.primary-toolbar .toolbar .button:active,
+.primary-toolbar.toolbar .button:active {
+    border-image: url("assets/primary-toolbar-button-active-border.svg") 4 / 4 stretch;
+}
+
+GtkSwitch.slider {
+    border-image: url("assets/switch-slider-border.svg") 2 / 2 stretch;
+}
+
+GtkSwitch.slider:active {
+    border-image: url("assets/switch-slider-active-border.svg") 2 / 2 stretch;
+}
+
+.progressbar,
+.entry.progressbar,
+.progressbar row,
+.progressbar row:hover,
+.progressbar row:selected,
+.progressbar row:selected:focused {
+    border-image: url("assets/progressbar-border.svg") 3 / 3 stretch;
+}
