adwaita: don't use custom code to render background-image assets

--- a/themes/Adwaita/gtk-3.0/gtk-widgets.css
+++ b/themes/Adwaita/gtk-3.0/gtk-widgets.css
@@ -680,6 +680,19 @@ GtkTreeMenu .menuitem * {
     color: @theme_selected_fg_color;
 }
 
+/****************
+ * Radiobuttons *
+ ****************/
+
+.radio,
+.check {
+    background-color: alpha(@theme_base_color, 0.0);
+    border-width: 0;
+    border-style: none;
+
+    /* background-image defined in -assets variant */
+}
+
 /************
  * Toolbars *
  ************/
