menuitem: use non-uniform rounded corners for menubar active items
Instead of hardcoding our custom code for it.

--- a/themes/Adwaita/gtk-3.0/gtk-widgets.css
+++ b/themes/Adwaita/gtk-3.0/gtk-widgets.css
@@ -584,7 +584,7 @@ GtkTreeMenu .menuitem * {
     background-image: none;
     background-color: @menu_bg_color;
 
-    border-radius: 5;
+    border-radius: 5 5 0 0;
 }
 
 .menubar .menuitem *:prelight {
