--- a/themes/Adwaita/gtk-3.0/gtk-widgets-assets-dark.css
+++ b/themes/Adwaita/gtk-3.0/gtk-widgets-assets-dark.css
@@ -139,7 +139,9 @@ GtkScale.scale-has-marks-below.slider.vertical:insensitive {
 }
 
 .primary-toolbar .toolbar .button:active,
-.primary-toolbar.toolbar .button:active {
+.primary-toolbar.toolbar .button:active,
+.primary-toolbar .toolbar .button:active:hover,
+.primary-toolbar.toolbar .button:active:hover {
     border-image: url("assets/primary-toolbar-button-active-border-dark.svg") 4 / 4 stretch;
 }
 
@@ -161,3 +163,17 @@ GtkSwitch.slider:active {
     border-image: url("assets/progressbar-border.svg") 2 / 2 stretch;
 }
 
+.button {
+    border-image: url("assets/button-border-dark.svg") 3 / 3 stretch;
+}
+
+.button:active,
+.toolbar .button:active,
+.button:hover:active,
+.toolbar .button:hover:active {
+    border-image: url("assets/button-active-border-dark.svg") 3 / 3 stretch;
+}
+
+.button.default {
+    border-image: url("assets/button-default-border-dark.svg") 4 / 4 stretch;
+}
