--- a/themes/Adwaita/gtk-3.0/gtk-widgets-assets-dark.css
+++ b/themes/Adwaita/gtk-3.0/gtk-widgets-assets-dark.css
@@ -138,11 +138,31 @@ GtkScale.scale-has-marks-below.slider.vertical:insensitive {
     background-image: url("assets/scale-slider-marks-below-vertical-insensitive-dark.svg");
 }
 
+.button {
+    border-image: url("assets/button-border-dark.svg") 3 / 3 stretch;
+}
+
+.button:active,
+.toolbar .button:active,
+.button:hover:active,
+.toolbar .button:hover:active {
+    border-image: url("assets/button-active-border-dark.svg") 3 / 3 stretch;
+}
+
+.button.default {
+    border-image: url("assets/button-default-border-dark.svg") 4 / 4 stretch;
+}
+
 .primary-toolbar .toolbar .button:active,
 .primary-toolbar.toolbar .button:active,
 .primary-toolbar .toolbar .button:active:hover,
 .primary-toolbar.toolbar .button:active:hover {
     border-image: url("assets/primary-toolbar-button-active-border-dark.svg") 4 / 4 stretch;
+}
+
+.primary-toolbar .toolbar .raised .button,
+.primary-toolbar.toolbar .raised .button {
+    border-image: url("assets/primary-toolbar-raised-button-border-dark.svg") 4 / 4 stretch;
 }
 
 /* TODO: need dark versions */
@@ -161,19 +181,4 @@ GtkSwitch.slider:active {
 .progressbar row:selected,
 .progressbar row:selected:focused {
     border-image: url("assets/progressbar-border.svg") 2 / 2 stretch;
-}
-
-.button {
-    border-image: url("assets/button-border-dark.svg") 3 / 3 stretch;
-}
-
-.button:active,
-.toolbar .button:active,
-.button:hover:active,
-.toolbar .button:hover:active {
-    border-image: url("assets/button-active-border-dark.svg") 3 / 3 stretch;
-}
-
-.button.default {
-    border-image: url("assets/button-default-border-dark.svg") 4 / 4 stretch;
 }
