notebook: remove border-image for buttons on notebook tabs

--- a/themes/Adwaita/gtk-3.0/gtk-widgets.css
+++ b/themes/Adwaita/gtk-3.0/gtk-widgets.css
@@ -416,6 +416,7 @@ GtkScrolledWindow.frame {
 .notebook tab .button:hover,
 .notebook tab .button:hover:active {
     border-style: none;
+    border-image: none;
     background-color: alpha (@theme_bg_color, 0.0);
     background-image: none;
 }
