menuitem: clear background for insensitive check/radio menuitems

--- a/themes/Adwaita/gtk-3.0/gtk-widgets.css
+++ b/themes/Adwaita/gtk-3.0/gtk-widgets.css
@@ -633,8 +633,11 @@ GtkTreeMenu .menuitem * {
 }
 
 .menuitem.check,
-.menuitem.radio {
+.menuitem.radio,
+.menuitem.check:insensitive,
+.menuitem.radio:insensitive {
     background-image: none;
+    background-color: alpha(@theme_base_color, 0.0);
 }
 
 .menuitem.check:active {
