scrollbars: don't change border color for insensitive scrollbar buttons

--- a/themes/Adwaita/gtk-3.0/gtk-widgets.css
+++ b/themes/Adwaita/gtk-3.0/gtk-widgets.css
@@ -510,6 +510,7 @@ GtkComboBox .button *:prelight {
 .scrollbar.button:insensitive {
     color: lighter (@internal_element_color);
     background-color: @theme_base_color;
+    border-color: @button_border;
 }
 
 .scrollbar.slider:insensitive {
